[Gradle Release Plugin] - new version commit:  '0.11.2-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 org.gradle.internal.http.connectionTimeout=60000
 org.gradle.internal.http.socketTimeout=60000
 
-version=0.11.1
+version=0.11.2-SNAPSHOT
