--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,8 @@ services:
     ports:
       - "5000:5000"
       - "5001:5001"
-    environment:
-      - MARQUEZ_PORT=5000
-      - MARQUEZ_ADMIN_PORT=5001
-      - MARQUEZ_CONFIG=/usr/src/app/marquez.yml
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
-      - POSTGRES_DB=marquez
-      - POSTGRES_USER=buendia
-      - POSTGRES_PASSWORD=macondo
     volumes:
       - ./docker/wait-for-it.sh:/usr/src/app/wait-for-it.sh
-      - ./marquez.example.yml:/usr/src/app/marquez.yml
     depends_on:
       - db
     entrypoint: ["./wait-for-it.sh", "db:5432", "--", "./entrypoint.sh"]
@@ -29,8 +19,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
       - MARQUEZ_DB=marquez
-      - MARQUEZ_USER=buendia
-      - MARQUEZ_PASSWORD=macondo
+      - MARQUEZ_USER=marquez
+      - MARQUEZ_PASSWORD=marquez
     volumes:
       - ./docker/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     # command: ["postgres", "-c", "log_statement=all"]
