Add run ID support on job meta (#818)
* Add runID to job meta

Signed-off-by: wslulciuc <willy@datakin.com>

* Add logic to JobService to link runs when run ID present

Signed-off-by: wslulciuc <willy@datakin.com>

* Add RunDao.updateJobVersionUuid()

Signed-off-by: wslulciuc <willy@datakin.com>

* Log when an existing run is associated with a job version

Signed-off-by: wslulciuc <willy@datakin.com>

* Install jdk 11 in CI

Signed-off-by: wslulciuc <willy@datakin.com>

* Set source and target compatibility to java 11

Signed-off-by: wslulciuc <willy@datakin.com>

* Use ifPresent to check for run ID

Signed-off-by: wslulciuc <willy@datakin.com>

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ repositories {
   mavenCentral()
 }
 
+java {
+  sourceCompatibility = JavaVersion.VERSION_11
+  targetCompatibility = JavaVersion.VERSION_11
+}
+
 ext {
   dropwizardVersion = '2.0.12'
   jdbi3Version = '3.13.0'
@@ -59,7 +64,7 @@ dependencies {
   annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
   testCompile "io.dropwizard:dropwizard-testing:${dropwizardVersion}"
-  testCompile 'io.github.marquezproject:marquez-java:0.4.1'
+  testCompile 'io.github.marquezproject:marquez-java:0.4.3-rc.1'
   testCompile "org.jdbi:jdbi3-testing:${jdbi3Version}"
   testCompile 'junit:junit:4.12'
   testCompile 'org.assertj:assertj-core:3.11.1'
