--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
           keys:
             - v1-jvm-{{ .Branch }}-{{ .Revision }}
             - v1-jvm-{{ .Branch }}
+      - run: ./.circleci/get-jdk11.sh
       - run: echo "checks.disable=true" > ~/.testcontainers.properties
       - run: ./gradlew --no-daemon --stacktrace build
       - run: ./gradlew --no-daemon jacocoTestReport
@@ -33,6 +34,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - run: ./.circleci/get-jdk11.sh
       - run: ./docker/login.sh
       - run: ./docker/build-and-push.sh $CIRCLE_TAG
 
