--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,12 @@ defaults: &defaults
   working_directory: ~/marquez
   machine: true
 
+# Define reusable config (see: https://yaml.org/spec/1.2/spec.html#id2765878)
+checkout_project_root: &checkout_project_root
+  # Override checkout path to project root (see: https://circleci.com/docs/2.0/configuration-reference/#checkout)
+  checkout:
+    path: ~/marquez
+
 jobs:
   build:
     <<: *defaults
@@ -30,6 +36,25 @@ jobs:
           paths:
             - ~/.gradle
 
+  test-web:
+    working_directory: ~/marquez/web
+    docker:
+      - image: circleci/node:11.9.0
+    environment:
+      TZ: 'America/New_York'
+    steps:
+      - *checkout_project_root
+      - restore_cache:
+          keys:
+            - v1-deps-{{ .Branch }}-{{ .Revision }}
+            - v1-deps-{{ .Branch }}
+      - run: npm install
+      - run: npm run test
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-deps-{{ .Branch }}-{{ .Revision }}
+
   release:
     <<: *defaults
     steps:
@@ -48,3 +73,6 @@ workflows:
               only: /^[0-9]+(\.[0-9]+){2}(-rc\.[0-9]+)?$/
             branches:
               ignore: /.*/
+  marquez_web:
+    jobs:
+      - test-web
