--- a/experimental/integrations/prototype-spark/marquez-spark-agent/build.gradle
+++ b/experimental/integrations/prototype-spark/marquez-spark-agent/build.gradle
@@ -28,8 +28,8 @@ repositories {
 
 dependencies {
     implementation 'org.javassist:javassist:3.20.0-GA'
-    implementation 'org.apache.spark:spark-core_2.11:2.4.7'
-    implementation 'org.apache.spark:spark-sql_2.11:2.4.7'
+    compileOnly 'org.apache.spark:spark-core_2.11:2.4.7'
+    compileOnly 'org.apache.spark:spark-sql_2.11:2.4.7'
     implementation 'com.github.ok2c.hc5:hc5-async-json:0.2.1'
     compileOnly 'org.projectlombok:lombok:1.18.16'
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
