--- a/experimental/integrations/marquez-spark-agent/build.gradle
+++ b/experimental/integrations/marquez-spark-agent/build.gradle
@@ -11,6 +11,7 @@ plugins {
     id 'java-library'
     id 'com.github.johnrengelman.shadow' version '6.0.0'
     id 'com.diffplug.spotless' version '5.1.0'
+    id 'com.adarshr.test-logger' version '2.1.1'
 }
 
 java {
