Add ci build for jvm modules (#915)
* Define submodules in settings.gradle

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix wrk dir for build-client-java job

Signed-off-by: wslulciuc <willy@datakin.com>

* Add common build config to subprojects

Signed-off-by: wslulciuc <willy@datakin.com>

* Add experimental marquez-spark to build

Signed-off-by: wslulciuc <willy@datakin.com>

* Revert to jdk11 for java client

Signed-off-by: wslulciuc <willy@datakin.com>

* Update build cmd for marquez-spark in ci

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Update build cmd for marquez-spark in ci

Signed-off-by: wslulciuc <willy@datakin.com>

* Ignore spotbugs globally

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix SparkAgentIntegrationTest

Signed-off-by: wslulciuc <willy@datakin.com>

* Define projects in base build.gradle

Signed-off-by: wslulciuc <willy@datakin.com>

* Push and build marquez-web image

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix shadow jar file name

Signed-off-by: wslulciuc <willy@datakin.com>

* Update gradle cmds in CONTRIBUTING.md

Signed-off-by: wslulciuc <willy@datakin.com>

* Update gradle cmds in README.md

Signed-off-by: wslulciuc <willy@datakin.com>

* Update gradle cmds in Dockerfile

Signed-off-by: wslulciuc <willy@datakin.com>

* Update api.jar location in README.md

Signed-off-by: wslulciuc <willy@datakin.com>

* Update build step in README.md

Signed-off-by: wslulciuc <willy@datakin.com>

* Add api as a module in README.md

Signed-off-by: wslulciuc <willy@datakin.com>

* Add airflow as an example integration

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Add airflow as an example integration

Signed-off-by: wslulciuc <willy@datakin.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,8 @@ jobs:
             - v1-api-{{ .Branch }}
       - run: ./.circleci/get-jdk11.sh
       - run: echo "checks.disable=true" > ~/.testcontainers.properties
-      - run: ./gradlew --no-daemon --stacktrace build
-      - run: ./gradlew --no-daemon jacocoTestReport
+      - run: ./gradlew --no-daemon --stacktrace api:build
+      - run: ./gradlew --no-daemon api:jacocoTestReport
       - run: bash <(curl -s https://codecov.io/bash)
       - store_test_results:
           path: build/test-results/test
@@ -56,17 +56,16 @@ jobs:
           key: v1-web-{{ .Branch }}-{{ .Revision }}
 
   build-client-java:
-    working_directory: ~/marquez/clients/java
-    machine: true
+    <<: *machine
     steps:
-      - *checkout_project_root
+      - checkout
       - restore_cache:
           keys:
             - v1-client-java-{{ .Branch }}-{{ .Revision }}
             - v1-client-java-{{ .Branch }}
-      - run: ../../.circleci/get-jdk11.sh
-      - run: ./gradlew --no-daemon --stacktrace build
-      - run: ./gradlew --no-daemon jacocoTestReport
+      - run: ./.circleci/get-jdk11.sh
+      - run: ./gradlew --no-daemon --stacktrace clients:java:build
+      - run: ./gradlew --no-daemon clients:java:jacocoTestReport
       - run: bash <(curl -s https://codecov.io/bash)
       - store_test_results:
           path: build/test-results/test
@@ -95,12 +94,12 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk
     steps:
-      - *checkout_project_root
+      - checkout
       - restore_cache:
           keys:
             - v1-integration-spark-{{ .Branch }}-{{ .Revision }}
             - v1-integration-spark-{{ .Branch }}
-      - run: ./gradlew --no-daemon --stacktrace build
+      - run: ./gradlew --no-daemon --stacktrace :experimental:integrations:marquez-spark-agent:build
       - save_cache:
           key: v1-integration-spark-{{ .Branch }}-{{ .Revision }}
           paths:
@@ -131,7 +130,6 @@ jobs:
     <<: *machine
     steps:
       - checkout
-      - run: ./.circleci/get-jdk11.sh
       - run: ./docker/login.sh
       - run: ./docker/build-and-push.sh $CIRCLE_TAG
 
