--- a/api/build.gradle
+++ b/api/build.gradle
@@ -12,6 +12,7 @@
  * limitations under the License.
  */
 
+import com.github.jengelman.gradle.plugins.shadow.transformers.ServiceFileTransformer
 import org.apache.tools.ant.filters.*
 
 plugins {
@@ -25,23 +26,54 @@ java {
     targetCompatibility = JavaVersion.VERSION_11
 }
 
+ext {
+    dropwizardVersion = '2.0.15'
+    jdbi3Version = '3.17.0'
+    lombokVersion = '1.18.12'
+    prometheusVersion = '0.9.0'
+}
+
 dependencies {
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
-    implementation 'io.dropwizard:dropwizard-jackson:1.3.14'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.9'
-    implementation 'org.apache.maven:maven-archiver:3.5.0'
+    compile "io.dropwizard:dropwizard-core:${dropwizardVersion}"
+    compile "io.dropwizard:dropwizard-jdbi3:${dropwizardVersion}"
+    compile "io.dropwizard:dropwizard-json-logging:${dropwizardVersion}"
+    compile "io.dropwizard:dropwizard-http2:${dropwizardVersion}"
+    compile "io.prometheus:simpleclient:${prometheusVersion}"
+    compile "io.prometheus:simpleclient_dropwizard:${prometheusVersion}"
+    compile "io.prometheus:simpleclient_hotspot:${prometheusVersion}"
+    compile "io.prometheus:simpleclient_servlet:${prometheusVersion}"
+    compile "org.jdbi:jdbi3-postgres:${jdbi3Version}"
+    compile "org.jdbi:jdbi3-sqlobject:${jdbi3Version}"
+    compile 'com.google.guava:guava:30.0-jre'
+    compile 'org.flywaydb:flyway-core:6.3.0'
+    compile 'org.postgresql:postgresql:42.2.5'
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-    testImplementation "org.slf4j:slf4j-simple:${slf4jVersion}"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.assertj:assertj-core:3.12.2'
-    testImplementation 'org.mockito:mockito-core:2.27.0'
+    testCompile project(':clients:java')
+    testCompile "io.dropwizard:dropwizard-testing:${dropwizardVersion}"
+    testCompile "org.jdbi:jdbi3-testing:${jdbi3Version}"
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.assertj:assertj-core:3.11.1'
+    testCompile 'org.mockito:mockito-core:3.3.3'
+    testCompile 'org.testcontainers:postgresql:1.13.0'
 }
 
 task testUnit(type: Test) {
     useJUnit {
-        includeCategories 'marquez.client.UnitTests'
+        includeCategories 'marquez.UnitTests'
+    }
+}
+
+task testIntegration(type: Test) {
+    useJUnit {
+        includeCategories 'marquez.IntegrationTests'
+    }
+}
+
+task testDataAccess(type: Test) {
+    useJUnit {
+        includeCategories 'marquez.DataAccessTests'
     }
 }
 
@@ -55,7 +87,7 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             groupId = 'io.github.marquezproject'
-            artifactId = 'marquez-java'
+            artifactId = 'marquez-api'
 
             from components.java
 
@@ -63,8 +95,8 @@ publishing {
             artifact javadocJar
 
             pom {
-                name = 'marquez-java'
-                description = 'Java client for Marquez'
+                name = 'marquez'
+                description = 'Collect, aggregate, and visualize a data ecosystem\'s metadata'
                 url = 'https://github.com/MarquezProject/marquez'
                 licenses {
                     license {
@@ -109,14 +141,23 @@ signing {
     sign publishing.publications.mavenJava
 }
 
-jar {
+
+mainClassName = 'marquez.MarquezApp'
+
+shadowJar {
+    classifier = ''
+    transform(ServiceFileTransformer)
     manifest {
         attributes(
                 'Created-By': "Gradle ${gradle.gradleVersion}",
                 'Built-By': System.getProperty('user.name'),
                 'Build-Jdk': System.getProperty('java.version'),
                 'Implementation-Title': project.name,
-                'Implementation-Version': project.version
-        )
+                'Implementation-Version': project.version,
+                'Main-Class': mainClassName)
     }
+}
+
+runShadow {
+    args = ['server', '../marquez.yml']
 }
