--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
         classpath 'com.github.jengelman.gradle.plugins:shadow:6.1.0'
         classpath 'gradle.plugin.com.github.spotbugs.snom:spotbugs-gradle-plugin:4.6.0'
         classpath 'com.diffplug.spotless:spotless-plugin-gradle:5.8.1'
+        classpath 'net.researchgate:gradle-release:2.8.1'
     }
 }
 
@@ -41,6 +42,7 @@ subprojects {
     apply plugin: 'com.github.johnrengelman.shadow'
     apply plugin: 'com.github.spotbugs'
     apply plugin: "com.diffplug.spotless"
+    apply plugin: 'net.researchgate.release'
 
     project(':api') {
         apply plugin: 'application'
@@ -58,7 +60,7 @@ subprojects {
     }
 
     ext {
-        lombokVersion = '1.18.8'
+        lombokVersion = '1.18.16'
         slf4jVersion = '1.7.26'
         isReleaseVersion = !version.endsWith("SNAPSHOT")
     }
@@ -83,6 +85,12 @@ subprojects {
     task javadocJar(type: Jar, dependsOn: javadoc) {
         classifier 'javadoc'
         from javadoc.destinationDir
+    }
+
+    release {
+        git {
+            requireBranch = 'main'
+        }
     }
 
     spotless {
