Updated build to automatically switch to JDK 8 if env is available (#1045)
This enables building the entire project with a single gradle command, making it easier to run all tests before committing

Signed-off-by: Michael Collado <mike@datakin.com>

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,12 @@ subprojects {
     apply plugin: "com.diffplug.spotless"
     apply plugin: 'net.researchgate.release'
 
+    compileTestJava.doFirst {
+        if (project.hasProperty("jdk8.build") && System.getenv("JDK8_HOME")) {
+            println "Switching build to JDK8 installation at ${System.getenv('JDK8_HOME')}"
+        }
+    }
+
     project(':api') {
         apply plugin: 'application'
         archivesBaseName = 'marquez-api'
@@ -69,12 +75,28 @@ subprojects {
         options.incremental = true
         options.compilerArgs << '-parameters'
         options.encoding = "UTF-8"
+        if (project.hasProperty("jdk8.build")) {
+            options.fork = true
+            sourceCompatibility = JavaVersion.VERSION_1_8
+            targetCompatibility = JavaVersion.VERSION_1_8
+        }
     }
 
     compileTestJava {
         options.incremental = true
         options.compilerArgs << '-parameters'
         options.encoding = "UTF-8"
+        if (project.hasProperty("jdk8.build")) {
+            sourceCompatibility = JavaVersion.VERSION_1_8
+            targetCompatibility = JavaVersion.VERSION_1_8
+            options.fork = true
+        }
+    }
+
+    tasks.withType(Test) {
+        if (project.hasProperty("jdk8.build") && System.getenv("JDK8_HOME")) {
+            test.executable = "${System.getenv('JDK8_HOME')}/bin/java"
+        }
     }
 
     task sourceJar(type: Jar) {
