Override PR target for renovate (#1053)
Signed-off-by: wslulciuc <willy@datakin.com>

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
     "docker:disable",
     ":gitSignOff"
   ],
+  "baseBranches": ["update-deps"],
   "lockFileMaintenance": { "enabled": true },
   "schedule": ["every weekend"]
 }
