Spotless fail wildcard imports (#1056)
* Configure spotless to fail build if wildcard imports are found

Signed-off-by: Michael Collado <mike@datakin.com>

* Removed wildcard imports to match spotless requirements

Signed-off-by: Michael Collado <mike@datakin.com>

--- a/build.gradle
+++ b/build.gradle
@@ -113,9 +113,18 @@ subprojects {
     }
 
     spotless {
+        def disallowWildcardImports = {
+            String text = it
+            def regex = ~/import .*\.\*;/
+            def m = regex.matcher(text)
+            if (m.find()) {
+                throw new AssertionError("Wildcard imports disallowed - ${m.findAll()}")
+            }
+        }
         java {
             googleJavaFormat()
             removeUnusedImports()
+            custom 'disallowWildcardImports', disallowWildcardImports
         }
     }
 
