--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,11 @@ jobs:
             - v1-integration-spark-{{ .Branch }}-{{ .Revision }}
             - v1-integration-spark-{{ .Branch }}
       - run: ./gradlew --no-daemon --stacktrace :integrations:spark:build
+      - run:
+          when: on_fail
+          command: cat integrations/spark/build/test-results/test/TEST-*.xml
+      - store_test_results:
+          path: integrations/spark/build/test-results/test
       - save_cache:
           key: v1-integration-spark-{{ .Branch }}-{{ .Revision }}
           paths:
