--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,12 +124,13 @@ jobs:
       - run: bash <(curl -s https://codecov.io/bash)
 
   test-integration-airflow:
-    working_directory: ~/marquez/integrations/airflow/tests/integration
+    working_directory: ~/marquez/integrations/airflow/
     machine: true
     steps:
       - *checkout_project_root
-      - run: ./../../../../.circleci/get-docker-compose.sh
-      - run: ./docker/up.sh
+      - run: ./../../.circleci/get-docker-compose.sh
+      - run: docker build -f Dockerfile.tests -t marquez-airflow-base .
+      - run: ./tests/integration/docker/up.sh
 
   release:
     <<: *machine
