Add sentry config (#1150)
* Add sentry config

Signed-off-by: wslulciuc <willy@datakin.com>

--- a/marquez.example.yml
+++ b/marquez.example.yml
@@ -59,6 +59,12 @@ logging:
       # Enables app logs formatted as JSON
       # layout:
       #   type: json
+    # Enables capturing app error logs with sentry (see: https://github.com/dhatim/dropwizard-sentry#configuration)
+    # - type: sentry
+    #   threshold: ${SENTRY_THRESHOLD:-ERROR}
+    #   dsn: ${SENTRY_DSN}
+    #   environment: ${SENTRY_ENVIRONMENT}
+    #   stacktraceAppPackages: ['marquez']
 
 ### METRICS CONFIG ###
 
