Add docs on applying db migrations manually (#1149)
* Add docs on applying db migrations manually

Signed-off-by: wslulciuc <willy@datakin.com>

* Update flyway cmd in error msg

Signed-off-by: wslulciuc <willy@datakin.com>

* Default db migrations to true

Signed-off-by: wslulciuc <willy@datakin.com>

* Add db host and port to migration docs

Signed-off-by: wslulciuc <willy@datakin.com>

--- a/marquez.example.yml
+++ b/marquez.example.yml
@@ -41,8 +41,8 @@ db:
 #   connectRetries: 3
 #   cleanDisabled: true
 
-# Enables database migration on startup (default: false)
-migrateOnStartup: ${MIGRATE_ON_STARTUP:-false}
+# Enables database migration on startup (default: true)
+migrateOnStartup: ${MIGRATE_ON_STARTUP:-true}
 
 # Enabled the Graphql endpoint
 graphql:
