Integrated Kubernetes secrets into the Helm chart to secure the Postgres database credentials. (#1145)
Signed-off-by: Kevin Mellott <kevinmellott@northwesternmutual.com>
Co-authored-by: Kevin Mellott <kevin.r.mellott@gmail.com>

--- a/chart/templates/marquez/deployment.yaml
+++ b/chart/templates/marquez/deployment.yaml
@@ -59,7 +59,10 @@ spec:
             - name: POSTGRES_USER
               value: {{ .Values.marquez.db.user }}
             - name: POSTGRES_PASSWORD
-              value: {{ .Values.marquez.db.password }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "marquez.secretName" . }}
+                  key: marquez-db-password
             - name: MIGRATE_ON_STARTUP
               value: {{ .Values.marquez.migrateOnStartup | quote }}
           {{- if .Values.marquez.resources }}
