--- a/api/build.gradle
+++ b/api/build.gradle
@@ -65,7 +65,6 @@ dependencies {
     testCompile "org.testcontainers:junit-jupiter:1.15.2"
 
 }
-
 task testUnit(type: Test) {
     useJUnitPlatform {
         includeTags 'UnitTests'
@@ -139,6 +138,9 @@ publishing {
 
 signing {
     required { isReleaseVersion }
+    def signingKey = findProperty("signingKey")
+    def signingPassword = findProperty("signingPassword")
+    useInMemoryPgpKeys(signingKey, signingPassword)
     sign publishing.publications.mavenJava
 }
 
