--- a/clients/java/build.gradle
+++ b/clients/java/build.gradle
@@ -100,6 +100,9 @@ publishing {
 
 signing {
     required { isReleaseVersion }
+    def signingKey = findProperty("signingKey")
+    def signingPassword = findProperty("signingPassword")
+    useInMemoryPgpKeys(signingKey, signingPassword)
     sign publishing.publications.mavenJava
 }
 
