Minor CI config changes to jobs (#1199)
* Rename test-integration-test-airflow

Signed-off-by: wslulciuc <willy@datakin.com>

* Remove required jobs for release jobs

Signed-off-by: wslulciuc <willy@datakin.com>

* Add only-on-release to CI release jobs

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix test result path for java CI jobs

Signed-off-by: wslulciuc <willy@datakin.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,23 @@
 version: 2.1
 
 # Define reusable config (see: https://yaml.org/spec/1.2/spec.html#id2765878)
-machine: &machine
-  working_directory: ~/marquez
-  machine: true
-
 checkout_project_root: &checkout_project_root
   # Override checkout path to project root (see: https://circleci.com/docs/2.0/configuration-reference/#checkout)
   checkout:
     path: ~/marquez
 
+# Only trigger CI job on release (=X.Y.Z)
+only-on-release: &only-on-release
+  filters:
+    tags:
+      only: /^[0-9]+(\.[0-9]+){2}(-rc\.[0-9]+)?$/
+    branches:
+      ignore: /.*/
+
 jobs:
   build-api:
-    <<: *machine
+    working_directory: ~/marquez
+    machine: true
     environment:
       TESTCONTAINERS_RYUK_DISABLED: true
     steps:
@@ -27,7 +32,7 @@ jobs:
       - run: ./gradlew --no-daemon api:jacocoTestReport
       - run: bash <(curl -s https://codecov.io/bash)
       - store_test_results:
-          path: build/test-results/test
+          path: api/build/test-results/test
       - store_artifacts:
           path: build/reports/tests/test
           destination: test-report
@@ -69,7 +74,7 @@ jobs:
       - run: ./gradlew --no-daemon clients:java:jacocoTestReport
       - run: bash <(curl -s https://codecov.io/bash)
       - store_test_results:
-          path: build/test-results/test
+          path: clients/java/build/test-results/test
       - store_artifacts:
           path: build/reports/tests/test
           destination: test-report
@@ -115,8 +120,12 @@ jobs:
       - run:
           when: on_fail
           command: cat integrations/spark/build/test-results/test/TEST-*.xml
+      - run: ./gradlew --no-daemon :integrations:spark:jacocoTestReport
       - store_test_results:
           path: integrations/spark/build/test-results/test
+      - store_artifacts:
+          path: build/reports/tests/test
+          destination: test-report
       - save_cache:
           key: v1-integration-spark-{{ .Branch }}-{{ .Revision }}
           paths:
@@ -147,8 +156,8 @@ jobs:
           paths:
             - ./*
 
-  test-integration-test-airflow:
-    working_directory: ~/marquez/integrations/airflow/
+  integration-test-airflow:
+    working_directory: ~/marquez/integrations/airflow
     machine: true
     steps:
       - *checkout_project_root
@@ -157,7 +166,8 @@ jobs:
       - run: ./tests/integration/docker/up.sh
 
   release-java:
-    <<: *machine
+    working_directory: ~/marquez
+    machine: true
     steps:
       - checkout
       - run: ./.circleci/get-jdk11.sh
@@ -168,7 +178,8 @@ jobs:
 
 
   release-docker:
-    <<: *machine
+    working_directory: ~/marquez
+    machine: true
     steps:
       - checkout
       - run: ./.circleci/get-jdk11.sh
@@ -177,13 +188,13 @@ jobs:
       - run: ./docker/build-and-push.sh $CIRCLE_TAG
 
   release-python:
+    working_directory: ~/marquez
     docker:
       - image: circleci/python:3.6
     steps:
       - checkout
       - attach_workspace:
           at: /tmp/workspace
-      - run: ls -la /tmp/workspace
       - run: pip install wheel twine
       - run: python -m twine upload --non-interactive --repository pypi /tmp/workspace/python/*
 
@@ -196,50 +207,16 @@ workflows:
       - build-integration-spark
       - test-client-python
       - build-client-python:
-          requires:
-            - test-client-python
-          filters:
-            tags:
-              only: /^[0-9]+(\.[0-9]+){2}(-rc\.[0-9]+)?$/
-            branches:
-              ignore: /.*/
+          <<: *only-on-release
       - test-integration-airflow
+      - integration-test-airflow:
+          requires:
+            - test-integration-airflow
       - build-integration-airflow:
-          filters:
-            tags:
-              only: /^[0-9]+(\.[0-9]+){2}(-rc\.[0-9]+)?$/
-            branches:
-              ignore: /.*/
-          requires:
-            - test-integration-airflow
-      - test-integration-test-airflow:
-          requires:
-            - test-integration-airflow
+          <<: *only-on-release
       - release-java:
-          filters:
-            tags:
-              only: /^[0-9]+(\.[0-9]+){2}(-rc\.[0-9]+)?$/
-            branches:
-              ignore: /.*/
-          requires:
-            - build-api
-            - build-client-java
-            - build-integration-spark
+          <<: *only-on-release
       - release-python:
-          filters:
-            tags:
-              only: /^[0-9]+(\.[0-9]+){2}(-rc\.[0-9]+)?$/
-            branches:
-              ignore: /.*/
-          requires:
-            - build-client-python
-            - build-integration-airflow
+          <<: *only-on-release
       - release-docker:
-          filters:
-            tags:
-              only: /^[0-9]+(\.[0-9]+){2}(-rc\.[0-9]+)?$/
-            branches:
-              ignore: /.*/
-          requires:
-            - test-web
-            - build-api
+          <<: *only-on-release
