tests: enable JUnit5, fix test isolation (#1227)
* enable JUnit5 tests

Signed-off-by: Maciej Obuchowski <maciej.obuchowski@getindata.com>

* test isolation

Signed-off-by: Maciej Obuchowski <maciej.obuchowski@getindata.com>

Co-authored-by: Maciej Obuchowski <maciej.obuchowski@getindata.com>
Co-authored-by: Willy Lulciuc <willy@datakin.com>

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -78,6 +78,10 @@ task testDataAccess(type: Test) {
     }
 }
 
+test {
+    useJUnitPlatform()
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
