Changes renovate dependency management settings to automatically merge patches, requires explicit upgrades for each major version (no skipping), and disables renovate completely for the NPM managed javascript within the web project. (#1313)
Signed-off-by: Kevin Mellott <kevinmellott@northwesternmutual.com>
Co-authored-by: Kevin Mellott <kevin.r.mellott@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -3,9 +3,14 @@
   "extends": [
     "config:base",
     "docker:disable",
-    ":gitSignOff"
+    ":gitSignOff",
+    ":separateMultipleMajorReleases",
+    ":automergePatch"
   ],
   "baseBranches": ["update-deps"],
   "lockFileMaintenance": { "enabled": true },
-  "schedule": ["every weekend"]
+  "schedule": ["every weekend"],
+  "npm": {
+    "enabled": false
+  }
 }
