--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -21,7 +21,7 @@ marquez:
   ## Name of the existing secret containing credentials for the Marquez installation.
   ## When this is specified, it will take precedence over the values configured in the 'db' section.
   ##
-  existingSecretName: marquez-secrets
+  # existingSecretName: marquez-secrets
   ## Postgres database settings where Marquez data will persist
   ##
   db:
