Fix release and version change for marquez_common python module (#1399)
* Fix release and version change for marquez_common python module

Signed-off-by: Michael Collado <mike@datakin.com>

* Renamed marquez-common package to marquez-integration-common

Signed-off-by: Michael Collado <mike@datakin.com>

* Updated integration test docker image to build integration-common wheel

Signed-off-by: Michael Collado <mike@datakin.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ checkout_project_root: &checkout_project_root
     path: ~/marquez
 
 install_integration_common: &install_integration_common
-  run: (cd ~/marquez/integrations/common && python setup.py install --user)
+  run: (cd ~/marquez/integrations/common && pip install . --user)
 
 # Only trigger CI job on release (=X.Y.Z)
 only-on-release: &only-on-release
@@ -262,6 +262,7 @@ workflows:
           requires:
             - build-client-python
             - build-integration-airflow
+            - build-integration-common
       - release-docker:
           <<: *only-on-release
           context: release
