--- a/integrations/common/setup.cfg
+++ b/integrations/common/setup.cfg
@@ -1,13 +1,17 @@
 [bumpversion]
-current_version = 0.14.2
+current_version = 0.15.1
 commit = False
 tag = False
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<rc>.*)
+serialize =
+	{major}.{minor}.{patch}{rc}
+	{major}.{minor}.{patch}
 
 [bumpversion:file:setup.py]
 search = version="{current_version}"
 replace = version="{new_version}"
 
-[bumpversion:file:marquez_airflow/__init__.py]
+[bumpversion:file:marquez/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
