--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -16,7 +16,7 @@ marquez:
   image:
     registry: docker.io
     repository: marquezproject/marquez
-    tag: 0.15.1
+    tag: 0.15.2-rc.1
     pullPolicy: IfNotPresent
   ## Name of the existing secret containing credentials for the Marquez installation.
   ## When this is specified, it will take precedence over the values configured in the 'db' section.
@@ -70,7 +70,7 @@ web:
   image:
     registry: docker.io
     repository: marquezproject/marquez-web
-    tag: 0.15.1
+    tag: 0.15.2-rc.1
     pullPolicy: IfNotPresent
   ## Marquez website will run on this port
   ##
