Updated bigquery and snowflake operators to avoid throwing import exceptions (#1414)
* Added build script and modified docker-compose in airflow example to support building local libraries

Signed-off-by: Michael Collado <mike@datakin.com>

* Updated bigquery and snowflake operators to avoid throwing exceptions in envs that are missing those dependencies

Signed-off-by: Michael Collado <mike@datakin.com>

* updated .gitignore for airflow examples dir

Signed-off-by: Michael Collado <mike@datakin.com>

* Added check that operator_class is not None

Signed-off-by: Michael Collado <mike@datakin.com>

Co-authored-by: Willy Lulciuc <willy@datakin.com>

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ clients/java/out/
 dist/
 integrations/airflow/tests/integration/integration-requirements.txt
 integrations/airflow/tests/integration/requirements.txt
+examples/airflow/whl
+examples/airflow/requirements.txt
+examples/airflow/marquez.env
 out/*
 
 # Marquez configuration
