urlencoded path params (#1419)
Signed-off-by: Maciej Obuchowski <maciej.obuchowski@getindata.com>

--- a/api/src/test/resources/config.test.yml
+++ b/api/src/test/resources/config.test.yml
@@ -2,6 +2,7 @@ server:
   applicationConnectors:
   - type: http
     port: 8080
+    httpCompliance: RFC7230_LEGACY
   adminConnectors:
   - type: http
     port: 8081
