--- a/marquez.dev.yml
+++ b/marquez.dev.yml
@@ -2,6 +2,7 @@ server:
   applicationConnectors:
   - type: http
     port: 5000
+    httpCompliance: RFC7230_LEGACY
   adminConnectors:
   - type: http
     port: 5001
